<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.algolnx.kachrawala.EmergencyPickup">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>
    <EditText
        android:id="@+id/locationCheck"
        android:drawableRight="@drawable/ic_location"
        android:layout_margin="10dp"
        android:layout_below="@id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:hint="@string/choose_your_location"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/weightapprox"
        android:layout_margin="10dp"
        android:layout_below="@id/locationCheck"
        android:hint="@string/approx_weight_of_mass"
        android:layout_width="match_parent"
        android:layout_height="70dp" />
    <Spinner
        android:spinnerMode="dropdown"
        android:layout_margin="10dp"
        android:layout_below="@id/weightapprox"
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="70dp">

    </Spinner>
    <Button
        android:layout_margin="10dp"
        android:layout_below="@id/spinner"
        android:text="@string/request_pickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
